# ethdebug.py

./: .gitmodules  LICENSE  README.md  generate_model.py  pyproject.toml
.github/workflows/: test.yml
datamodel-code-generator/: pyproject.toml
datamodel-code-generator/src/datamodel_code_generator/: ethdebug_resolver.py  reference.py
datamodel-code-generator/src/datamodel_code_generator/parser/: base.py
src/annotator/: __init__.py  __main__.py  annotate.py  ast_walker.py  bytecode.py  opcodes.py  program.py  types.py  variables.py
src/ethdebug/: cursor.py  data.py  evaluate.py  machine.py  read.py
src/ethdebug/dereference/: __main__.py  cursor.py  generate.py  memo.py  process.py  region.py
src/ethdebug/format/: info.py  info_schema.py  pointer.py  pointer_schema.py  program.py  program_schema.py  type.py  type_schema.py
src/ethdebug/format/data/: hex.py  hex_schema.py  unsigned.py  unsigned_schema.py  value.py  value_schema.py
src/ethdebug/format/info/: resources.py  resources_schema.py
src/ethdebug/format/materials/: compilation.py  compilation_schema.py  id.py  id_schema.py  reference.py  reference_schema.py  source-range.py  source.py  source_range_schema.py  source_schema.py
src/ethdebug/format/pointer/: collection.py  collection_schema.py  expression.py  expression_schema.py  identifier.py  identifier_schema.py  region.py  region_schema.py  template.py  template_schema.py
src/ethdebug/format/program/: __init__.py  context.py  context_schema.py  instruction.py  instruction_schema.py
src/ethdebug/format/type/: base.py  (+11 more)
src/tests/: conftest.py  ethdebug_dsl.py  mock_machine.py  test_annotate_solc.py  test_read.py
src/tests/abstract_and_interface/: input.json
src/tests/mega_playground/: input.json
src/tests/standard_yul_debug_info_ethdebug_compatible_output/: in.yul
tests/: mock_machine.py  run_test.py  test_data.py  test_evaluate.py  test_read.py  test_solc.py
tests/abstract_and_interface/: output.json
tests/mega_playground/: mega_playground.sol  output.json
tests/standard_yul_debug_info_ethdebug_compatible_output/: input.json  output.json
(+74 files in other folders)
