[project]
name = "ethdebug"
version = "0.1.0"
description = "EthDebug library for Python"
authors = [{ name = "Raoul Schaffranek", email = "raoul.schaffranek@runtimeverification.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "eth-hash[pycryptodome]>=0.7.1",
    "pydantic (>=2.11.3,<3.0.0)",
]

[dependency-groups]
dev = [
    "datamodel-code-generator",
    "pytest>=8.3.5",
]

[tool.uv]

[tool.uv.sources]
datamodel-code-generator = { path = "./datamodel-code-generator", editable = true }

[tool.hatch.build.targets.sdist]
include = ["src/ethdebug"]

[tool.hatch.build.targets.wheel]
include = ["src/ethdebug"]

[tool.hatch.build.targets.wheel.sources]
"src/ethdebug" = "ethdebug"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
